fix: align upload Lumo CSS with base styles

--- a/packages/vaadin-lumo-styles/components/upload.css
+++ b/packages/vaadin-lumo-styles/components/upload.css
@@ -25,7 +25,7 @@
 
 :where(:root, :host) {
   --vaadin-upload-gap: 0;
-  --vaadin-upload-file-list-border-color: var(
+  --vaadin-upload-file-list-divider-color: var(
     --lumo-contrast-10pct
   );
 }
